<resources>
    <string name="app_name">Movie trailer</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_search">Search</string>

    <string name="search_editText_hint">Search....</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="title_holder">Title</string>
    <string name="rating_holder">9.9</string>
    <string name="release_holder">12/10/2019</string>
    <string name="description_holder">description</string>
    <string name="release_date_side_title">release_date:</string>
    <string name="no_favorite_movies">No Favorite Movies</string>
    <string name="no_movies">No Movies To Display</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
